--- a/packages/pix-web/package.json
+++ b/packages/pix-web/package.json
@@ -32,6 +32,7 @@
     "events": "^1.1.1",
     "graphql-cache": "file:///home/jamie/dev/graphql-cache",
     "graphql-tag": "^1.0.0",
+    "moment": "^2.17.1",
     "react": "^15.4.1",
     "react-addons-css-transition-group": "^15.4.1",
     "react-dom": "^15.4.1",
