--- a/packages/pix-web/.babelrc
+++ b/packages/pix-web/.babelrc
@@ -5,6 +5,7 @@
     ["module-alias", [
       { "src": "./src/core", "expose": "core" },
       { "src": "./src/controllers", "expose": "controllers" },
+      { "src": "./src/theme", "expose": "theme" },
       { "src": "./src/ui", "expose": "ui" },
       { "src": "./src/core", "expose": "core" }
     ]]
