--- a/packages/pix-web/package.json
+++ b/packages/pix-web/package.json
@@ -26,7 +26,7 @@
     "webpack-dev-server": "^1.15.1"
   },
   "dependencies": {
-    "@blueprintjs/core": "^1.4.0",
+    "@blueprintjs/core": "^1.6.0",
     "babel-polyfill": "^6.13.0",
     "classnames": "^2.2.5",
     "events": "^1.1.1",
@@ -44,6 +44,7 @@
     "redux": "^3.6.0",
     "redux-form": "^6.2.0",
     "socket.io-client": "^1.6.0",
+    "styled-components": "^1.3.1",
     "uuid": "^3.0.0"
   }
 }
