--- a/packages/pix-server/package.json
+++ b/packages/pix-server/package.json
@@ -14,6 +14,7 @@
   "author": "Jamie Greeff <jamie@greeff.me>",
   "license": "AGPL",
   "dependencies": {
+    "ajv": "^4.11.2",
     "babel-polyfill": "^6.16.0",
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
