--- a/packages/pix-web/package.json
+++ b/packages/pix-web/package.json
@@ -30,14 +30,14 @@
     "babel-polyfill": "^6.13.0",
     "classnames": "^2.2.5",
     "events": "^1.1.1",
-    "graphql-cache": "file:///home/jamie/dev/graphql-cache",
+    "graphql-cache": "*",
     "graphql-tag": "^1.0.0",
     "mapbox-gl": "^0.31.0",
     "moment": "^2.17.1",
     "react": "^15.4.1",
     "react-addons-css-transition-group": "^15.4.1",
     "react-dom": "^15.4.1",
-    "react-graphql": "0.0.1",
+    "react-graphql": "0.0.3",
     "react-redux": "^4.4.6",
     "react-resolver": "^3.1.0",
     "react-router": "^2.8.1",
