--- a/package.json
+++ b/package.json
@@ -11,14 +11,23 @@
     "eslint-plugin-babel": "^3.3.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.22.2",
     "babel-eslint": "^6.1.2",
+    "babel-plugin-module-alias": "^1.6.0",
+    "babel-plugin-module-resolver": "^2.4.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-stage-1": "^6.22.0",
     "eslint": "^3.11.0",
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-react": "^6.7.1",
-    "eslint-plugin-react-native": "^2.1.0"
+    "eslint-plugin-react-native": "^2.1.0",
+    "lerna": "2.0.0-beta.32"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "bootstrap": "lerna bootstrap",
+    "build": "./resources/scripts/build.sh",
+    "watch": "./resources/scripts/watch.sh"
   },
   "eslintConfig": {
     "rules": {
