--- a/packages/pix-web/package.json
+++ b/packages/pix-web/package.json
@@ -17,6 +17,7 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-1": "^6.13.0",
     "css-loader": "^0.23.1",
+    "dotenv": "^4.0.0",
     "json-loader": "^0.5.4",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
